--- a/pubs.html
+++ b/pubs.html
@@ -377,6 +377,23 @@ $(document).ready(function () {
 </ul>
 
 <div class="bibox" style="display: none;">
+<pre><code id="bibtex-perera2022hmab">
+@article{perera2022hmab,
+  title = {{HMAB}: Self-Driving Hierarchy of Bandits for Integrated Physical Database Design Tuning},
+  author = {R. Malinga Perera and Bastian Oetomo and Benjamin I. P. Rubinstein and Renata Borovica-Gajic},
+  year = {2022},
+  journal = {Proceedings of the VLDB Endowment},
+  publisher = {VLDB Endowment},
+  volume = {16},
+  note = {Accepted},
+}
+</code></pre></div>
+
+<ul>
+<li>Perera, R. Malinga, Bastian Oetomo, Benjamin I. P. Rubinstein, and Renata Borovica-Gajic. “HMAB: Self-Driving Hierarchy of Bandits for Integrated Physical Database Design Tuning”. In: <em>Proceedings of the VLDB Endowment</em> 16 (2022). Accepted. [<a style="cursor: pointer;" onclick="DownloadToFile('perera2022hmab.bib', 'bibtex-perera2022hmab')">BibTeX</a>]</li>
+</ul>
+
+<div class="bibox" style="display: none;">
 <pre><code id="bibtex-marchant2022hard">
 @article{marchant2022hard,
   title = {Hard to Forget: Poisoning Attacks on Certified Machine Unlearning},
