--- a/pubs.html
+++ b/pubs.html
@@ -461,6 +461,21 @@ $(document).ready(function () {
 </ul>
 
 <div class="bibox" style="display: none;">
+<pre><code id="bibtex-wang2022foiling">
+@inproceedings{wang2022foiling,
+  title = {Foiling Training-Time Attacks on Neural Machine Translation Systems},
+  author = {Jun Wang and Xuanli He and Benjamin I. P. Rubinstein and Trevor Cohn},
+  year = {2022},
+  booktitle = {Findings of the Association for Computational Linguistics: EMNLP 2022},
+  note = {Accepted},
+}
+</code></pre></div>
+
+<ul>
+<li>Wang, Jun, Xuanli He, Benjamin I. P. Rubinstein, and Trevor Cohn. “Foiling Training-Time Attacks on Neural Machine Translation Systems”. In: <em>Findings of the Association for Computational Linguistics: EMNLP 2022</em>. Accepted. 2022 [<a style="cursor: pointer;" onclick="DownloadToFile('wang2022foiling.bib', 'bibtex-wang2022foiling')">BibTeX</a>]</li>
+</ul>
+
+<div class="bibox" style="display: none;">
 <pre><code id="bibtex-weera2021local">
 @inproceedings{weera2021local,
   title = {Local Intrinsic Dimensionality Signals Adversarial Perturbations},
