--- a/pubs.html
+++ b/pubs.html
@@ -342,7 +342,7 @@ $(document).ready(function () {
 </code></pre></div>
 
 <ul>
-<li>Cullen, Andrew C., Paul Montague, Shijie Liu, Sarah Monazam Erfani, and Benjamin I. P. Rubinstein. “Double Bubble, Toil and Trouble: Enhancing Certified Robustness through Transitivity”. In: <em>Advances in Neural Information Processing Systems</em>. NeurIPS. Accepted. 2022 [<a style="cursor: pointer;" onclick="DownloadToFile('cullen2022double.bib', 'bibtex-cullen2022double')">BibTeX</a>]</li>
+<li>Cullen, Andrew C., Paul Montague, Shijie Liu, Sarah Monazam Erfani, and Benjamin I. P. Rubinstein. “Double Bubble, Toil and Trouble: Enhancing Certified Robustness through Transitivity”. In: <em>Advances in Neural Information Processing Systems</em>. NeurIPS. Accepted. 2022 [<a href="https://arxiv.org/abs/2210.06077">full</a>; <a href="https://github.com/andrew-cullen/DoubleBubble">code</a>; <a style="cursor: pointer;" onclick="DownloadToFile('cullen2022double.bib', 'bibtex-cullen2022double')">BibTeX</a>]</li>
 </ul>
 
 <div class="bibox" style="display: none;">
