--- a/pubs.html
+++ b/pubs.html
@@ -358,7 +358,7 @@ $(document).ready(function () {
 </code></pre></div>
 
 <ul>
-<li>Rubinstein, J. Hyam and Benjamin I. P. Rubinstein. “Unlabelled Sample Compression Schemes for Intersection-Closed Classes and Extremal Classes”. In: <em>Advances in Neural Information Processing Systems</em>. NeurIPS. Accepted. 2022 [<a href="https://arxiv.org/abs/2210.05455">full</a>; <a style="cursor: pointer;" onclick="DownloadToFile('rubinstein2022unlabelled.bib', 'bibtex-rubinstein2022unlabelled')">BibTeX</a>]</li>
+<li>Rubinstein, J. Hyam and Benjamin I. P. Rubinstein. “Unlabelled Sample Compression Schemes for Intersection-Closed Classes and Extremal Classes”. In: <em>Advances in Neural Information Processing Systems</em>. NeurIPS. Accepted. 2022 [<a href="https://arxiv.org/abs/2210.05455">full</a>; <a href="https://recorder-v3.slideslive.com/#/share?share=76156&amp;s=b89c0ea6-8bc0-4472-aa51-c1632814b669">video</a>; <a style="cursor: pointer;" onclick="DownloadToFile('rubinstein2022unlabelled.bib', 'bibtex-rubinstein2022unlabelled')">BibTeX</a>]</li>
 </ul>
 
 <div class="bibox" style="display: none;">
