--- a/pubs.html
+++ b/pubs.html
@@ -336,13 +336,13 @@ $(document).ready(function () {
   author = {Andrew C. Cullen and Paul Montague and Shijie Liu and Sarah Monazam Erfani and Benjamin I. P. Rubinstein},
   booktitle = {Advances in Neural Information Processing Systems},
   series = {NeurIPS},
-  note = {Accepted},
+  note = {Accepted as Oral},
   year = {2022},
 }
 </code></pre></div>
 
 <ul>
-<li>Cullen, Andrew C., Paul Montague, Shijie Liu, Sarah Monazam Erfani, and Benjamin I. P. Rubinstein. “Double Bubble, Toil and Trouble: Enhancing Certified Robustness through Transitivity”. In: <em>Advances in Neural Information Processing Systems</em>. NeurIPS. Accepted. 2022 [<a href="https://arxiv.org/abs/2210.06077">full</a>; <a href="https://github.com/andrew-cullen/DoubleBubble">code</a>; <a href="https://recorder-v3.slideslive.com/#/share?share=74042&amp;s=8b0cbca4-1e05-445d-a46b-c33fae65a4f8">video</a>; <a style="cursor: pointer;" onclick="DownloadToFile('cullen2022double.bib', 'bibtex-cullen2022double')">BibTeX</a>]</li>
+<li>Cullen, Andrew C., Paul Montague, Shijie Liu, Sarah Monazam Erfani, and Benjamin I. P. Rubinstein. “Double Bubble, Toil and Trouble: Enhancing Certified Robustness through Transitivity”. In: <em>Advances in Neural Information Processing Systems</em>. NeurIPS. Accepted as Oral. 2022 [<a href="https://arxiv.org/abs/2210.06077">full</a>; <a href="https://github.com/andrew-cullen/DoubleBubble">code</a>; <a href="https://recorder-v3.slideslive.com/#/share?share=74042&amp;s=8b0cbca4-1e05-445d-a46b-c33fae65a4f8">video</a>; <a style="cursor: pointer;" onclick="DownloadToFile('cullen2022double.bib', 'bibtex-cullen2022double')">BibTeX</a>]</li>
 </ul>
 
 <div class="bibox" style="display: none;">
