--- a/pubs.html
+++ b/pubs.html
@@ -385,12 +385,13 @@ $(document).ready(function () {
   journal = {Proceedings of the VLDB Endowment},
   publisher = {VLDB Endowment},
   volume = {16},
-  note = {Accepted},
+  number = {2},
+  pages = {216--229},
 }
 </code></pre></div>
 
 <ul>
-<li>Perera, R. Malinga, Bastian Oetomo, Benjamin I. P. Rubinstein, and Renata Borovica-Gajic. “HMAB: Self-Driving Hierarchy of Bandits for Integrated Physical Database Design Tuning”. In: <em>Proceedings of the VLDB Endowment</em> 16 (2022). Accepted. [<a style="cursor: pointer;" onclick="DownloadToFile('perera2022hmab.bib', 'bibtex-perera2022hmab')">BibTeX</a>]</li>
+<li>Perera, R. Malinga, Bastian Oetomo, Benjamin I. P. Rubinstein, and Renata Borovica-Gajic. “HMAB: Self-Driving Hierarchy of Bandits for Integrated Physical Database Design Tuning”. In: <em>Proceedings of the VLDB Endowment</em> 16.2 (2022), pp. 216-229 [<a href="http://vldb.org/pvldb/volumes/16/paper/HMAB%3A%20Self-Driving%20Hierarchy%20of%20Bandits%20for%20Integrated%20Physical%20Database%20Design%20Tuning">publisher link</a>; <a href="https://github.com/malingaperera/HMAB">code</a>; <a style="cursor: pointer;" onclick="DownloadToFile('perera2022hmab.bib', 'bibtex-perera2022hmab')">BibTeX</a>]</li>
 </ul>
 
 <div class="bibox" style="display: none;">
