AAAI, AAMAS, JSSAM

--- a/pubs.html
+++ b/pubs.html
@@ -327,6 +327,57 @@ $(document).ready(function () {
 <p><br></p>
 <p>See my <a href="https://scholar.google.com.au/citations?user=hMG_gR4AAAAJ&amp;oi=ao">Google Scholar profile</a> for bibliometrics, or <a href="http://arxiv.org/a/rubinstein_b_1">arXiv</a> for preprints. My responses to government consultations are <a href="impact.html#policy_submissions">here</a>.</p>
 <div id="section" class="section level3">
+<h3>2023</h3>
+
+<div class="bibox" style="display: none;">
+<pre><code id="bibtex-liu2023enhancing">
+@inproceedings{liu2023enhancing,
+  title = {Enhancing the Antidote: Improved Pointwise Certifications against Poisoning Attacks},
+  author = {Shijie Liu and Andrew C. Cullen and Paul Montague and Sarah Monazam Erfani and Benjamin I. P. Rubinstein},
+  year = {2023},
+  booktitle = {Proceedings of the 37th AAAI Conference on Artificial Intelligence},
+  series = {AAAI},
+  note = {Accepted},
+}
+</code></pre></div>
+
+<ul>
+<li>Liu, Shijie, Andrew C. Cullen, Paul Montague, Sarah Monazam Erfani, and Benjamin I. P. Rubinstein. “Enhancing the Antidote: Improved Pointwise Certifications against Poisoning Attacks”. In: <em>Proceedings of the 37th AAAI Conference on Artificial Intelligence</em>. AAAI. Accepted. 2023 [<a style="cursor: pointer;" onclick="DownloadToFile('liu2023enhancing.bib', 'bibtex-liu2023enhancing')">BibTeX</a>]</li>
+</ul>
+
+<div class="bibox" style="display: none;">
+<pre><code id="bibtex-sun2023an">
+@inproceedings{sun2023an,
+  title = {An Adversarial Strategic Game for Machine Learning as a Service using System Features},
+  author = {Guoxin Sun and Tansu Alpcan and Andrew C. Cullen and Seyit Camtepe and Benjamin I. P. Rubinstein},
+  booktitle = {Proceedings of the 22nd International Conference on Autonomous Agents and Multiagent Systems},
+  series = {AAMAS},
+  year = {2023},
+  note = {Extended abstract. Accepted},
+}
+</code></pre></div>
+
+<ul>
+<li>Sun, Guoxin, Tansu Alpcan, Andrew C. Cullen, Seyit Camtepe, and Benjamin I. P. Rubinstein. “An Adversarial Strategic Game for Machine Learning as a Service using System Features”. In: <em>Proceedings of the 22nd International Conference on Autonomous Agents and Multiagent Systems</em>. AAMAS. Extended abstract. Accepted. 2023 [<a style="cursor: pointer;" onclick="DownloadToFile('sun2023an.bib', 'bibtex-sun2023an')">BibTeX</a>]</li>
+</ul>
+
+<div class="bibox" style="display: none;">
+<pre><code id="bibtex-marchant2023bayesian">
+@article{marchant2023bayesian,
+  title = {{B}ayesian Graphical Entity Resolution using Exchangeable Random Partition Priors},
+  author = {Neil G. Marchant and Benjamin I. P. Rubinstein and Rebecca C. Steorts},
+  year = {2023},
+  journal = {Journal of Survey Statistics and Methodology},
+  note = {In press},
+  publisher = {Oxford University Press},
+}
+</code></pre></div>
+
+<ul>
+<li>Marchant, Neil G., Benjamin I. P. Rubinstein, and Rebecca C. Steorts. “Bayesian Graphical Entity Resolution using Exchangeable Random Partition Priors”. In: <em>Journal of Survey Statistics and Methodology</em> (2023). In press. [<a href="https://doi.org/10.1093/jssam/smac030">publisher link</a>; <a style="cursor: pointer;" onclick="DownloadToFile('marchant2023bayesian.bib', 'bibtex-marchant2023bayesian')">BibTeX</a>]</li>
+</ul>
+</div>
+<div id="section-1" class="section level3">
 <h3>2022</h3>
 
 <div class="bibox" style="display: none;">
@@ -336,13 +387,13 @@ $(document).ready(function () {
   author = {Andrew C. Cullen and Paul Montague and Shijie Liu and Sarah Monazam Erfani and Benjamin I. P. Rubinstein},
   booktitle = {Advances in Neural Information Processing Systems},
   series = {NeurIPS},
-  note = {Accepted as Oral},
   year = {2022},
+  note = {Accepted},
 }
 </code></pre></div>
 
 <ul>
-<li>Cullen, Andrew C., Paul Montague, Shijie Liu, Sarah Monazam Erfani, and Benjamin I. P. Rubinstein. “Double Bubble, Toil and Trouble: Enhancing Certified Robustness through Transitivity”. In: <em>Advances in Neural Information Processing Systems</em>. NeurIPS. Accepted as Oral. 2022 [<a href="https://arxiv.org/abs/2210.06077">full</a>; <a href="https://github.com/andrew-cullen/DoubleBubble">code</a>; <a href="https://recorder-v3.slideslive.com/#/share?share=74042&amp;s=8b0cbca4-1e05-445d-a46b-c33fae65a4f8">video</a>; <a style="cursor: pointer;" onclick="DownloadToFile('cullen2022double.bib', 'bibtex-cullen2022double')">BibTeX</a>]</li>
+<li>Cullen, Andrew C., Paul Montague, Shijie Liu, Sarah Monazam Erfani, and Benjamin I. P. Rubinstein. “Double Bubble, Toil and Trouble: Enhancing Certified Robustness through Transitivity”. In: <em>Advances in Neural Information Processing Systems</em>. NeurIPS. Accepted. 2022 [<span style="color:red">Selected as Oral (7% of papers)</span>; <a href="https://arxiv.org/abs/2210.06077">full</a>; <a href="https://github.com/andrew-cullen/DoubleBubble">code</a>; <a href="https://recorder-v3.slideslive.com/#/share?share=74042&amp;s=8b0cbca4-1e05-445d-a46b-c33fae65a4f8">video</a>; <a style="cursor: pointer;" onclick="DownloadToFile('cullen2022double.bib', 'bibtex-cullen2022double')">BibTeX</a>]</li>
 </ul>
 
 <div class="bibox" style="display: none;">
@@ -446,22 +497,6 @@ $(document).ready(function () {
 </ul>
 
 <div class="bibox" style="display: none;">
-<pre><code id="bibtex-marchant2022bayesian">
-@article{marchant2022bayesian,
-  title = {{B}ayesian Graphical Entity Resolution using Exchangeable Random Partition Priors},
-  author = {Neil G. Marchant and Benjamin I. P. Rubinstein and Rebecca C. Steorts},
-  year = {2022},
-  journal = {Journal of Survey Statistics and Methodology},
-  note = {Special Issue on Data Integration. Accepted},
-  publisher = {Oxford University Press},
-}
-</code></pre></div>
-
-<ul>
-<li>Marchant, Neil G., Benjamin I. P. Rubinstein, and Rebecca C. Steorts. “Bayesian Graphical Entity Resolution using Exchangeable Random Partition Priors”. In: <em>Journal of Survey Statistics and Methodology</em> (2022). Special Issue on Data Integration. Accepted. [<a style="cursor: pointer;" onclick="DownloadToFile('marchant2022bayesian.bib', 'bibtex-marchant2022bayesian')">BibTeX</a>]</li>
-</ul>
-
-<div class="bibox" style="display: none;">
 <pre><code id="bibtex-wang2022foiling">
 @inproceedings{wang2022foiling,
   title = {Foiling Training-Time Attacks on Neural Machine Translation Systems},
@@ -556,7 +591,7 @@ $(document).ready(function () {
 <li>Bachfischer, Matthias, Renata Borovica-Gajic, and Benjamin I. P. Rubinstein. <em>Testing the Robustness of Learned Index Structures</em>. arXiv:2207.11575 [cs.DB]. Jul. 2022 [<a href="https://arxiv.org/abs/2207.11575">PDF</a>; <a style="cursor: pointer;" onclick="DownloadToFile('bachfischer22testing.bib', 'bibtex-bachfischer22testing')">BibTeX</a>]</li>
 </ul>
 </div>
-<div id="section-1" class="section level3">
+<div id="section-2" class="section level3">
 <h3>2021</h3>
 
 <div class="bibox" style="display: none;">
@@ -814,7 +849,7 @@ $(document).ready(function () {
 <li>Perera, R. Malinga, Bastian Oetomo, Benjamin I. P. Rubinstein, and Renata Borovica-Gajic. <em>No DBA? No regret! Multi-armed bandits for index tuning of analytical and HTAP workloads with provable guarantees</em>. arXiv:2108.10130 [cs.DB]. Aug. 2021 [<a href="https://arxiv.org/abs/2108.10130">PDF</a>; <a style="cursor: pointer;" onclick="DownloadToFile('perera2021nodba.bib', 'bibtex-perera2021nodba')">BibTeX</a>]</li>
 </ul>
 </div>
-<div id="section-2" class="section level3">
+<div id="section-3" class="section level3">
 <h3>2020</h3>
 
 <div class="bibox" style="display: none;">
@@ -995,7 +1030,7 @@ $(document).ready(function () {
 <li>Gelbhart, Roei and Benjamin I. P. Rubinstein. <em>Discrete Few-Shot Learning for Pan Privacy</em>. arXiv:2006.13120 [cs.LG]. Jun. 2020 [<a href="https://arxiv.org/abs/2006.13120">PDF</a>; <a style="cursor: pointer;" onclick="DownloadToFile('gelbhart2020discrete.bib', 'bibtex-gelbhart2020discrete')">BibTeX</a>]</li>
 </ul>
 </div>
-<div id="section-3" class="section level3">
+<div id="section-4" class="section level3">
 <h3>2019</h3>
 
 <div class="bibox" style="display: none;">
@@ -1128,7 +1163,7 @@ $(document).ready(function () {
 <li>Oetomo, Bastian, Malinga Perera, Renata Borovica-Gajic, and Benjamin I. P. Rubinstein. <em>A Note on Bounding Regret of the C<span class="math inline">\(^2\)</span>UCB Contextual Combinatorial Bandit</em>. Feb. 2019. arXiv: 1902.07500 [cs.LG]. [<a href="https://arxiv.org/pdf/1902.07500">PDF</a>; <a style="cursor: pointer;" onclick="DownloadToFile('oetomo2019a.bib', 'bibtex-oetomo2019a')">BibTeX</a>]</li>
 </ul>
 </div>
-<div id="section-4" class="section level3">
+<div id="section-5" class="section level3">
 <h3>2018</h3>
 
 <div class="bibox" style="display: none;">
@@ -1254,7 +1289,7 @@ $(document).ready(function () {
 <li>Han, Yi and Benjamin I. P. Rubinstein. “Adequacy of the Gradient-Descent Method for Classifier Evasion Attacks”. In: <em>AAAI-18 Workshop on Artificial Intelligence for Cyber Security</em>. AICS. Jan. 2018, pp. 237-244 [<a href="https://arxiv.org/pdf/1704.01704">PDF</a>; <a style="cursor: pointer;" onclick="DownloadToFile('han2018adequacy.bib', 'bibtex-han2018adequacy')">BibTeX</a>]</li>
 </ul>
 </div>
-<div id="section-5" class="section level3">
+<div id="section-6" class="section level3">
 <h3>2017</h3>
 
 <div class="bibox" style="display: none;">
@@ -1446,7 +1481,7 @@ $(document).ready(function () {
 <li>Verkade, Heather, Jason M. Lodge, Kristine Elliott, Terrence D. Mulhern, Allen A. Espinosa, Simon J. Cropper, and Benjamin I. P. Rubinstein. “Exploring misconceptions as a trigger for enhancing student learning”. In: <em>Higher Education Research and Development Society of Australasia</em>. HERDSA. Apr. 2017, pp. 392-401 [<a href="http://www.herdsa.org.au/system/files/Verkade_et_al_HERDSA2017.pdf">PDF</a>; <a href="http://www.herdsa.org.au/research-and-development-higher-education-vol-40-392">publisher link</a>; <a style="cursor: pointer;" onclick="DownloadToFile('verkade2017exploring.bib', 'bibtex-verkade2017exploring')">BibTeX</a>]</li>
 </ul>
 </div>
-<div id="section-6" class="section level3">
+<div id="section-7" class="section level3">
 <h3>2016</h3>
 
 <div class="bibox" style="display: none;">
@@ -1608,7 +1643,7 @@ $(document).ready(function () {
 <li>He, Jiazhen, Benjamin I. P. Rubinstein, James Bailey, Rui Zhang, and Sandra Milligan. <em>TopicResponse: A Marriage of Topic Modelling and Rasch Modelling for Automatic Measurement in MOOCs</em>. 2016. arXiv: 1607.08720 [cs.LG]. [<a href="https://arxiv.org/pdf/1607.08720">PDF</a>; <a href="https://bitbucket.org/jiazhenhe/topicresponse">code</a>; <a style="cursor: pointer;" onclick="DownloadToFile('he2016topicresponse.bib', 'bibtex-he2016topicresponse')">BibTeX</a>]</li>
 </ul>
 </div>
-<div id="section-7" class="section level3">
+<div id="section-8" class="section level3">
 <h3>2015</h3>
 
 <div class="bibox" style="display: none;">
@@ -1699,7 +1734,7 @@ $(document).ready(function () {
 <li>Fanaeepour, Maryam, Lars Kulik, Egemen Tanin, and Benjamin I. P. Rubinstein. “The CASE histogram: Privacy-aware processing of trajectory data using aggregates”. In: <em>GeoInformatica</em> 19.4 (Jul. 2015), pp. 747-798 [<a href="http://link.springer.com/article/10.1007/s10707-015-0228-8">publisher link</a>; <a style="cursor: pointer;" onclick="DownloadToFile('fanaeepour2015the.bib', 'bibtex-fanaeepour2015the')">BibTeX</a>]</li>
 </ul>
 </div>
-<div id="section-8" class="section level3">
+<div id="section-9" class="section level3">
 <h3>2014</h3>
 
 <div class="bibox" style="display: none;">
@@ -1755,7 +1790,7 @@ $(document).ready(function () {
 <li>Dimitrakakis, Christos, Aikaterini Mitrokotsa, and Benjamin I. P. Rubinstein. “Proceedings of the 7th Workshop on Artificial Intelligence and Security (AISec)”. In: <em>Proceedings of the 2014 ACM Conference on Computer and Communications Security</em>. CCS. ACM Press, 2014, pp. 1-124 [<a href="https://dl.acm.org/citation.cfm?id=2666652&amp;picked=prox">publisher link</a>; <a style="cursor: pointer;" onclick="DownloadToFile('dimitrakakis2014proceedings.bib', 'bibtex-dimitrakakis2014proceedings')">BibTeX</a>]</li>
 </ul>
 </div>
-<div id="section-9" class="section level3">
+<div id="section-10" class="section level3">
 <h3>2012</h3>
 
 <div class="bibox" style="display: none;">
@@ -1906,7 +1941,7 @@ $(document).ready(function () {
 <li>Cardenas, Alvaro A., Blaine Nelson, and Benjamin I. P. Rubinstein. “Fifth ACM Workshop on Artificial Intelligence and Security (AISec)”. In: <em>Proceedings of the 2012 ACM Conference on Computer and Communications Security</em>. CCS. ACM. Oct. 2012, pp. 1-110 [<a href="http://dx.doi.org/10.1145/2382196.2382327">publisher link</a>; <a style="cursor: pointer;" onclick="DownloadToFile('cardenas2012fifth.bib', 'bibtex-cardenas2012fifth')">BibTeX</a>]</li>
 </ul>
 </div>
-<div id="section-10" class="section level3">
+<div id="section-11" class="section level3">
 <h3>2011</h3>
 
 <div class="bibox" style="display: none;">
@@ -1996,7 +2031,7 @@ $(document).ready(function () {
 <li>Cardenas, Alvaro A., Rachel Greenstadt, and Benjamin I. P. Rubinstein. “Proceedings of the 4th Workshop on Artificial Intelligence and Security (AISec)”. In: <em>Proceedings of the 2011 ACM Conference on Computer and Communications Security</em>. CCS. ACM Press, Oct. 2011, pp. 1-116 [<a href="http://dl.acm.org/citation.cfm?id=2046684&amp;coll=DL&amp;dl=GUIDE&amp;CFID=49909398&amp;CFTOKEN=70172951">publisher link</a>; <a style="cursor: pointer;" onclick="DownloadToFile('cardenas2011proceedings.bib', 'bibtex-cardenas2011proceedings')">BibTeX</a>]</li>
 </ul>
 </div>
-<div id="section-11" class="section level3">
+<div id="section-12" class="section level3">
 <h3>2010</h3>
 
 <div class="bibox" style="display: none;">
@@ -2063,7 +2098,7 @@ $(document).ready(function () {
 <li>Rubinstein, Benjamin I. P. “Secure Learning and Learning for Security: Research in the Intersection”. PhD dissertation. Department of Electrical Engineering &amp; Computer Sciences, University of California, Berkeley, May. 2010 [<a href="http://www2.eecs.berkeley.edu/Pubs/TechRpts/2010/EECS-2010-71.pdf">PDF</a>; <a style="cursor: pointer;" onclick="DownloadToFile('rubinstein2010secure.bib', 'bibtex-rubinstein2010secure')">BibTeX</a>]</li>
 </ul>
 </div>
-<div id="section-12" class="section level3">
+<div id="section-13" class="section level3">
 <h3>2009</h3>
 
 <div class="bibox" style="display: none;">
@@ -2166,7 +2201,7 @@ $(document).ready(function () {
 <li>Rubinstein, Benjamin I. P. “Shifting in the n-Cube: Online Mistake Bounds and the Sample Compression Conjecture”. MCompSci thesis. Faculty of Engineering, University of Melbourne, 2009 [<a href="http://repository.unimelb.edu.au/10187/5774">full</a>; <a style="cursor: pointer;" onclick="DownloadToFile('rubinstein2009bshifting.bib', 'bibtex-rubinstein2009bshifting')">BibTeX</a>]</li>
 </ul>
 </div>
-<div id="section-13" class="section level3">
+<div id="section-14" class="section level3">
 <h3>2008</h3>
 
 <div class="bibox" style="display: none;">
@@ -2250,7 +2285,7 @@ $(document).ready(function () {
 <li>Rubinstein, Benjamin I. P., Blaine Nelson, Ling Huang, Anthony D. Joseph, Shing-hon Lau, Nina Taft, and Doug Tygar. <em>Compromising PCA-based anomaly detectors for network-wide traffic</em>. technical report UCB/EECS-2008-73. EECS Department, University of California, Berkeley, 2008 [<a href="http://www2.eecs.berkeley.edu/Pubs/TechRpts/2008/EECS-2008-73.pdf">PDF</a>; <a style="cursor: pointer;" onclick="DownloadToFile('rubinstein2008compromising.bib', 'bibtex-rubinstein2008compromising')">BibTeX</a>]</li>
 </ul>
 </div>
-<div id="section-14" class="section level3">
+<div id="section-15" class="section level3">
 <h3>2007</h3>
 
 <div class="bibox" style="display: none;">
