group update, JSSAM arXiv

--- a/pubs.html
+++ b/pubs.html
@@ -325,7 +325,7 @@ $(document).ready(function () {
 <p><link rel="stylesheet" href="styles.css" type="text/css"></p>
 <script type="text/javascript" src="js/download.js"></script>
 <p><br></p>
-<p>See my <a href="https://scholar.google.com.au/citations?user=hMG_gR4AAAAJ&amp;oi=ao">Google Scholar profile</a> for bibliometrics, or <a href="http://arxiv.org/a/rubinstein_b_1">arXiv</a> for preprints. My responses to government consultations are <a href="impact.html#policy_submissions">here</a>.</p>
+<p>See my <a href="https://scholar.google.com.au/citations?user=hMG_gR4AAAAJ&amp;oi=ao">Google Scholar profile</a> for bibliometrics, or <a href="http://arxiv.org/a/rubinstein_b_1">arXiv</a> for preprints. If you’re having trouble accessing any paper at a publisher’s site, just contact me for a PDF by email. My responses to government consultations are <a href="impact.html#policy_submissions">here</a>.</p>
 <div id="section" class="section level3">
 <h3>2023</h3>
 
@@ -358,7 +358,7 @@ $(document).ready(function () {
 </code></pre></div>
 
 <ul>
-<li>Marchant, Neil G., Benjamin I. P. Rubinstein, and Rebecca C. Steorts. “Bayesian Graphical Entity Resolution using Exchangeable Random Partition Priors”. In: <em>Journal of Survey Statistics and Methodology</em> (2023). In press. [<a href="https://doi.org/10.1093/jssam/smac030">publisher link</a>; <a style="cursor: pointer;" onclick="DownloadToFile('marchant2023bayesian.bib', 'bibtex-marchant2023bayesian')">BibTeX</a>]</li>
+<li>Marchant, Neil G., Benjamin I. P. Rubinstein, and Rebecca C. Steorts. “Bayesian Graphical Entity Resolution using Exchangeable Random Partition Priors”. In: <em>Journal of Survey Statistics and Methodology</em> (2023). In press. [<a href="https://doi.org/10.1093/jssam/smac030">publisher link</a>; <a href="https://arxiv.org/abs/2301.02962">full</a>; <a style="cursor: pointer;" onclick="DownloadToFile('marchant2023bayesian.bib', 'bibtex-marchant2023bayesian')">BibTeX</a>]</li>
 </ul>
 
 <div class="bibox" style="display: none;">
