--- a/group.html
+++ b/group.html
@@ -328,28 +328,27 @@ $(document).ready(function () {
 <div id="postdocs" class="section level3">
 <h3>Postdocs</h3>
 <ul>
-<li><a href="https://www.ngmarchant.net/">Neil Marchant</a> (2021– ). Machine learning in privacy and databases.</li>
-<li><a href="https://www.linkedin.com/in/andrew-cullen-67b04746/?originalSubdomain=au">Andrew Cullen</a> (2019– ). Certified robustness.</li>
-<li><a href="https://shuozhou.github.io/">Shuo Zhou</a> (w Tordesillas, Bailey, Bondell 2019– ). Complex networks in materials science, cybersecurity.</li>
+<li><a href="https://www.ngmarchant.net/">Neil Marchant</a> (2021– ). Robustness, privacy, and generalisation in machine learning.</li>
+<li><a href="https://www.linkedin.com/in/andrew-cullen-67b04746/?originalSubdomain=au">Andrew Cullen</a> (2019– ). Certified robustness of machine learning.</li>
 </ul>
 </div>
 <div id="phd-students" class="section level3">
 <h3>PhD students</h3>
 <ul>
-<li>Jiankai Jin. (w Olya Ohrimenko 2021– ). Multi-party machine learning.</li>
-<li><a href="https://github.com/Dovermore">Zhuoqun (Calvin) Huang</a>. (w Olya Ohrimenko, Neil Marchant 2021– ). Topics in privacy, robustness, adaptive data analysis.</li>
-<li><a href="https://www.linkedin.com/in/shijie-liu-9162b8151/">Shijie Liu</a>. (w Sarah Erfani, Paul Montague, Andrew Cullen 2021– ). Certified robustness.</li>
+<li><a href="https://cis.unimelb.edu.au/people/students/jiankai-jin">Jiankai Jin</a>. (w Olya Ohrimenko 2021– ). Systems security of differential privacy.</li>
+<li><a href="https://github.com/Dovermore">Zhuoqun (Calvin) Huang</a>. (w Olya Ohrimenko, Neil Marchant 2021– ). Certified robustness in computer security applications.</li>
+<li><a href="https://www.linkedin.com/in/shijie-liu-9162b8151/">Shijie Liu</a>. (w Sarah Erfani, Paul Montague, Andrew Cullen 2021– ). Certified robustness at training time.</li>
 <li><a href="https://www.linkedin.com/in/jun-wang-15065b170/">Jun Wang</a>. (w Trevor Cohn 2020– ). Adversarial learning for NLP.</li>
-<li><a href="https://www.linkedin.com/in/guoxin-sun-338888162/">Guoxin Sun</a>. (w Tansu Alpcan, Seyit Camtepe 2020– ). Distributed adversarial learning.</li>
+<li><a href="https://www.linkedin.com/in/guoxin-sun-338888162/">Guoxin Sun</a>. (w Tansu Alpcan, Seyit Camtepe 2020– ). Adversarial learning/game theory for autonomous systems.</li>
 <li><a href="https://scholar.google.com/citations?user=gjSlsnQAAAAJ&amp;hl=en">Ruihan Zhang</a> (w Tim Miller, Kris Ehinger 2019– ). Explainable AI and machine learning.</li>
 <li><a href="http://www.malinga.me/">Malinga Perera</a> (w Renata Borovica-Gajic 2018– ). Self-driving databases.</li>
-<li><a href="https://www.linkedin.com/in/bastian-oetomo-34300856/">Bastian Oetomo</a> (w Renata Borovica-Gajic 2018– ). Self-driving databases.</li>
+<li><a href="https://www.linkedin.com/in/bastian-oetomo-34300856/">Bastian Oetomo</a> (w Renata Borovica-Gajic 2018– ). Multi-armed bandits for database index selection.</li>
 </ul>
 </div>
 <div id="phd-studentscompleted" class="section level3">
 <h3>PhD students—Completed</h3>
 <ul>
-<li><a href="https://www.linkedin.com/in/dongge-liu-9a957913a">Dongge Liu</a> (w Toby Murray, Thuan Pham, Gidon Ernst at LMU Munich 2018–22). Software fuzzing with machine learning → Software Engineer at Google</li>
+<li><a href="https://www.linkedin.com/in/dongge-liu-9a957913a">Dongge Liu</a> (w Toby Murray, Thuan Pham, Gidon Ernst at LMU Munich 2018–22). Software fuzzing with machine learning → Open-Source Security at Google</li>
 <li><a href="https://www.ngmarchant.net/">Neil Marchant</a> (w Beka Steorts at Duke, Aurore Delaigle 2016–20). Bayesian record linkage, adaptive importance sampling for efficient evaluation → Postdoc at Univ Melbourne</li>
 <li><a href="https://au.linkedin.com/in/leyla-roohi-b4544a67">Leyla Roohi</a> (w Vanessa Teague 2017–19). Secure storage and private querying for telecommunications metadata → Postdoc at Univ Melbourne → Digital fraud analyst at ANZ Bank</li>
 <li><a href="https://scholar.google.com/citations?user=qDDC09EAAAAJ&amp;hl=en">Yuan Li</a> (w Trevor Cohn 2015–19). Crowd sourcing, Bayesian optimisation, NLP → Postdoc at Univ Melbourne</li>
@@ -369,6 +368,7 @@ $(document).ready(function () {
 <li><a href="https://cis.unimelb.edu.au/people/prameesha-weerasinghe">Sandamal Weerasinghe</a> (postdoc 2019–21). Adversarial machine learning.</li>
 <li><a href="https://scholar.google.co.il/citations?user=en8SzLcAAAAJ&amp;hl=en">Roei Gelbhart</a> (student 2019–21). Robustness in machine learning.</li>
 <li><a href="https://changxu.io/">Chang Xu</a> (postdoc 2020–21). Adversarial learning for NLP → Data Scientist, News Corp, Sydney.</li>
+<li><a href="https://shuozhou.github.io/">Shuo Zhou</a> (postdoc w Tordesillas, Bailey, Bondell 2019–20). Complex networks in materials science, cybersecurity.</li>
 <li><a href="https://tlienart.github.io/">Thibaut Lienart</a> (postdoc 2018–19). Adversarial machine learning → Associate, Alan Turing Institute</li>
 <li><a href="https://scholar.google.com/citations?user=e_mtK4kAAAAJ&amp;hl=en">Yi Han</a> (postdoc 2016–19). Adversarial reinforcement learning → Postdoc at Melbourne</li>
 <li><a href="https://scholar.google.com/citations?user=TpErHPkAAAAJ&amp;hl=en">Shen Wang</a> (postdoc 2016–18). Probabilistic programming, databases, record linkage.</li>
