--- a/pubs.html
+++ b/pubs.html
@@ -376,6 +376,35 @@ $(document).ready(function () {
 <ul>
 <li>Sun, Guoxin, Tansu Alpcan, Andrew C. Cullen, Seyit Camtepe, and Benjamin I. P. Rubinstein. “An Adversarial Strategic Game for Machine Learning as a Service using System Features”. In: <em>Proceedings of the 22nd International Conference on Autonomous Agents and Multiagent Systems</em>. AAMAS. Extended abstract. Accepted. 2023 [<a style="cursor: pointer;" onclick="DownloadToFile('sun2023an.bib', 'bibtex-sun2023an')">BibTeX</a>]</li>
 </ul>
+
+<div class="bibox" style="display: none;">
+<pre><code id="bibtex-liu2023efficient">
+@inproceedings{liu2023efficient,
+  title = {Efficient Index Learning via Model Reuse and Fine-tuning},
+  author = {Guanli Liu and Jianzhong Qi and Lars Kulik and Kazuya Soga and Renata Borovica-Gajic and Benjamin I. P. Rubinstein},
+  booktitle = {International Workshop on Databases and Machine Learning},
+  series = {DBML},
+  year = {2023},
+}
+</code></pre></div>
+
+<ul>
+<li>Liu, Guanli, Jianzhong Qi, Lars Kulik, Kazuya Soga, Renata Borovica-Gajic, and Benjamin I. P. Rubinstein. “Efficient Index Learning via Model Reuse and Fine-tuning”. In: <em>International Workshop on Databases and Machine Learning</em>. DBML. Co-located with ICDE. Accepted. 2023 [<a style="cursor: pointer;" onclick="DownloadToFile('liu2023efficient.bib', 'bibtex-liu2023efficient')">BibTeX</a>]</li>
+</ul>
+
+<div class="bibox" style="display: none;">
+<pre><code id="bibtex-oetomo2023cutting">
+@article{oetomo2023cutting,
+  title = {Cutting to the Chase with Warm-Start Contextual Bandits},
+  author = {Bastian Saputra Oetomo and R. Malinga Perera and Renata Borovica-Gajic and Benjamin I. P. Rubinstein},
+  year = {2023},
+  journal = {Knowledge and Information Systems},
+}
+</code></pre></div>
+
+<ul>
+<li>Oetomo, Bastian Saputra, R. Malinga Perera, Renata Borovica-Gajic, and Benjamin I. P. Rubinstein. “Cutting to the Chase with Warm-Start Contextual Bandits”. In: <em>Knowledge and Information Systems</em> (2023). Accepted. [<a style="cursor: pointer;" onclick="DownloadToFile('oetomo2023cutting.bib', 'bibtex-oetomo2023cutting')">BibTeX</a>]</li>
+</ul>
 </div>
 <div id="section-1" class="section level3">
 <h3>2022</h3>
