arXiv cert malware

--- a/pubs.html
+++ b/pubs.html
@@ -362,6 +362,20 @@ $(document).ready(function () {
 </ul>
 
 <div class="bibox" style="display: none;">
+<pre><code id="bibtex-oetomo2023cutting">
+@article{oetomo2023cutting,
+  title = {Cutting to the Chase with Warm-Start Contextual Bandits},
+  author = {Bastian Saputra Oetomo and R. Malinga Perera and Renata Borovica-Gajic and Benjamin I. P. Rubinstein},
+  year = {2023},
+  journal = {Knowledge and Information Systems},
+}
+</code></pre></div>
+
+<ul>
+<li>Oetomo, Bastian Saputra, R. Malinga Perera, Renata Borovica-Gajic, and Benjamin I. P. Rubinstein. “Cutting to the Chase with Warm-Start Contextual Bandits”. In: <em>Knowledge and Information Systems</em> (2023). Accepted. [<a style="cursor: pointer;" onclick="DownloadToFile('oetomo2023cutting.bib', 'bibtex-oetomo2023cutting')">BibTeX</a>]</li>
+</ul>
+
+<div class="bibox" style="display: none;">
 <pre><code id="bibtex-sun2023an">
 @inproceedings{sun2023an,
   title = {An Adversarial Strategic Game for Machine Learning as a Service using System Features},
@@ -393,17 +407,18 @@ $(document).ready(function () {
 </ul>
 
 <div class="bibox" style="display: none;">
-<pre><code id="bibtex-oetomo2023cutting">
-@article{oetomo2023cutting,
-  title = {Cutting to the Chase with Warm-Start Contextual Bandits},
-  author = {Bastian Saputra Oetomo and R. Malinga Perera and Renata Borovica-Gajic and Benjamin I. P. Rubinstein},
+<pre><code id="bibtex-huang2023certified">
+@misc{huang2023certified,
+  title = {Certified Robustness of Learning-based Static Malware Detectors},
+  author = {Zhuoqun Huang and Neil G Marchant and Keane Lucas and Lujo Bauer and Olga Ohrimenko and Benjamin I. P. Rubinstein},
+  note = {arXiv:2207.11575 [cs.CR]},
   year = {2023},
-  journal = {Knowledge and Information Systems},
+  month = {January},
 }
 </code></pre></div>
 
 <ul>
-<li>Oetomo, Bastian Saputra, R. Malinga Perera, Renata Borovica-Gajic, and Benjamin I. P. Rubinstein. “Cutting to the Chase with Warm-Start Contextual Bandits”. In: <em>Knowledge and Information Systems</em> (2023). Accepted. [<a style="cursor: pointer;" onclick="DownloadToFile('oetomo2023cutting.bib', 'bibtex-oetomo2023cutting')">BibTeX</a>]</li>
+<li>Huang, Zhuoqun, Neil G Marchant, Keane Lucas, Lujo Bauer, Olga Ohrimenko, and Benjamin I. P. Rubinstein. <em>Certified Robustness of Learning-based Static Malware Detectors</em>. arXiv:2207.11575 [cs.CR]. Jan. 2023 [<a href="https://arxiv.org/abs/2302.01757">PDF</a>; <a style="cursor: pointer;" onclick="DownloadToFile('huang2023certified.bib', 'bibtex-huang2023certified')">BibTeX</a>]</li>
 </ul>
 </div>
 <div id="section-1" class="section level3">
