--- a/pubs.html
+++ b/pubs.html
@@ -358,7 +358,7 @@ $(document).ready(function () {
 </code></pre></div>
 
 <ul>
-<li>Marchant, Neil G., Benjamin I. P. Rubinstein, and Rebecca C. Steorts. “Bayesian Graphical Entity Resolution using Exchangeable Random Partition Priors”. In: <em>Journal of Survey Statistics and Methodology</em> (2023). In press. [<a href="https://doi.org/10.1093/jssam/smac030">publisher link</a>; <a href="https://arxiv.org/abs/2301.02962">full</a>; <a style="cursor: pointer;" onclick="DownloadToFile('marchant2023bayesian.bib', 'bibtex-marchant2023bayesian')">BibTeX</a>]</li>
+<li>Marchant, Neil G., Benjamin I. P. Rubinstein, and Rebecca C. Steorts. “Bayesian Graphical Entity Resolution using Exchangeable Random Partition Priors”. In: <em>Journal of Survey Statistics and Methodology</em> (2023). In press. [<a href="https://doi.org/10.1093/jssam/smac030">publisher link</a>; <a href="https://arxiv.org/abs/2301.02962">full</a>; <a href="https://github.com/cleanzr/exchanger-experiments">code</a>; <a style="cursor: pointer;" onclick="DownloadToFile('marchant2023bayesian.bib', 'bibtex-marchant2023bayesian')">BibTeX</a>]</li>
 </ul>
 
 <div class="bibox" style="display: none;">
