--- a/pubs.html
+++ b/pubs.html
@@ -420,6 +420,21 @@ $(document).ready(function () {
 <ul>
 <li>Huang, Zhuoqun, Neil G Marchant, Keane Lucas, Lujo Bauer, Olga Ohrimenko, and Benjamin I. P. Rubinstein. <em>Certified Robustness of Learning-based Static Malware Detectors</em>. arXiv:2207.11575 [cs.CR]. Jan. 2023 [<a href="https://arxiv.org/abs/2302.01757">PDF</a>; <a style="cursor: pointer;" onclick="DownloadToFile('huang2023certified.bib', 'bibtex-huang2023certified')">BibTeX</a>]</li>
 </ul>
+
+<div class="bibox" style="display: none;">
+<pre><code id="bibtex-cullen2023exploiting">
+@misc{cullen2023exploiting,
+  title = {Exploiting Certified Defences to Attack Randomised Smoothing},
+  author = {Andrew C. Cullen and Paul Montague and Shijie Liu and Sarah M. Erfani and Benjamin I. P. Rubinstein},
+  note = {arXiv:2302.04379 [cs.LG]},
+  year = {2023},
+  month = {February},
+}
+</code></pre></div>
+
+<ul>
+<li>Cullen, Andrew C., Paul Montague, Shijie Liu, Sarah M. Erfani, and Benjamin I. P. Rubinstein. <em>Exploiting Certified Defences to Attack Randomised Smoothing</em>. arXiv:2302.04379 [cs.LG]. Feb. 2023 [<a href="https://arxiv.org/abs/2302.04379">PDF</a>; <a style="cursor: pointer;" onclick="DownloadToFile('cullen2023exploiting.bib', 'bibtex-cullen2023exploiting')">BibTeX</a>]</li>
+</ul>
 </div>
 <div id="section-1" class="section level3">
 <h3>2022</h3>
