--- a/pubs.html
+++ b/pubs.html
@@ -376,6 +376,20 @@ $(document).ready(function () {
 </ul>
 
 <div class="bibox" style="display: none;">
+<pre><code id="bibtex-cullen2023predicting">
+@article{cullen2023predicting,
+  title = {Predicting dynamic spectrum allocation: a review covering simulation, modelling, and prediction},
+  author = {Andrew C. Cullen and Benjamin I. P. Rubinstein and Sithamparanathan Kandeepan and Barry Flower and Philip H. W. Leong},
+  journal = {Artificial Intelligence Review},
+  year = {2023},
+}
+</code></pre></div>
+
+<ul>
+<li>Cullen, Andrew C., Benjamin I. P. Rubinstein, Sithamparanathan Kandeepan, Barry Flower, and Philip H. W. Leong. “Predicting dynamic spectrum allocation: a review covering simulation, modelling, and prediction”. In: <em>Artificial Intelligence Review</em> (2023). [<a href="https://doi.org/10.1007/s10462-023-10449-9">publisher link</a>; <a style="cursor: pointer;" onclick="DownloadToFile('cullen2023predicting.bib', 'bibtex-cullen2023predicting')">BibTeX</a>]</li>
+</ul>
+
+<div class="bibox" style="display: none;">
 <pre><code id="bibtex-sun2023an">
 @inproceedings{sun2023an,
   title = {An Adversarial Strategic Game for Machine Learning as a Service using System Features},
